[package]
name = "topdown-shooter"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14"
bevy_pancam = "0.13.0"
log = {version = "*", features = ["max_level_debug", "release_max_level_warn"]}
rand = "0.8.5"

[workspace]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"
